[gd_scene load_steps=51 format=3 uid="uid://c861smevaeaq6"]

[ext_resource type="Script" path="res://entities/boids/boid.gd" id="1_t1ht1"]
[ext_resource type="Texture2D" uid="uid://bvdcerbrj443d" path="res://assets/sprites/characters/people/warren.png" id="2_bu32e"]
[ext_resource type="Texture2D" uid="uid://cga7gmr45ukhy" path="res://assets/sprites/attacks/blood_explosion.png" id="2_max7p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5qjy4"]
atlas = ExtResource("2_max7p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvepl"]
atlas = ExtResource("2_max7p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lplp"]
atlas = ExtResource("2_max7p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hli0d"]
atlas = ExtResource("2_max7p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ya8"]
atlas = ExtResource("2_max7p")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffyya"]
atlas = ExtResource("2_max7p")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pekxh"]
atlas = ExtResource("2_max7p")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u662"]
atlas = ExtResource("2_max7p")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebtv7"]
atlas = ExtResource("2_bu32e")
region = Rect2(0, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sy0c"]
atlas = ExtResource("2_bu32e")
region = Rect2(64, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ebcc"]
atlas = ExtResource("2_bu32e")
region = Rect2(128, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4rcb"]
atlas = ExtResource("2_bu32e")
region = Rect2(192, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_narkl"]
atlas = ExtResource("2_bu32e")
region = Rect2(256, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2wlv"]
atlas = ExtResource("2_bu32e")
region = Rect2(320, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh2b8"]
atlas = ExtResource("2_bu32e")
region = Rect2(384, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpngv"]
atlas = ExtResource("2_bu32e")
region = Rect2(448, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfdwd"]
atlas = ExtResource("2_bu32e")
region = Rect2(512, 647, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e6df"]
atlas = ExtResource("2_bu32e")
region = Rect2(0, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn134"]
atlas = ExtResource("2_bu32e")
region = Rect2(64, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohcjf"]
atlas = ExtResource("2_bu32e")
region = Rect2(128, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hse6r"]
atlas = ExtResource("2_bu32e")
region = Rect2(192, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uwqi"]
atlas = ExtResource("2_bu32e")
region = Rect2(256, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvp5u"]
atlas = ExtResource("2_bu32e")
region = Rect2(320, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0krhh"]
atlas = ExtResource("2_bu32e")
region = Rect2(384, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3amt6"]
atlas = ExtResource("2_bu32e")
region = Rect2(448, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpojo"]
atlas = ExtResource("2_bu32e")
region = Rect2(512, 583, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfu8v"]
atlas = ExtResource("2_bu32e")
region = Rect2(0, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgom5"]
atlas = ExtResource("2_bu32e")
region = Rect2(64, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gb6x"]
atlas = ExtResource("2_bu32e")
region = Rect2(128, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx5cp"]
atlas = ExtResource("2_bu32e")
region = Rect2(192, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4jly"]
atlas = ExtResource("2_bu32e")
region = Rect2(256, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emq2e"]
atlas = ExtResource("2_bu32e")
region = Rect2(320, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suecg"]
atlas = ExtResource("2_bu32e")
region = Rect2(384, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cr"]
atlas = ExtResource("2_bu32e")
region = Rect2(448, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t87s4"]
atlas = ExtResource("2_bu32e")
region = Rect2(512, 711, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikr2v"]
atlas = ExtResource("2_bu32e")
region = Rect2(0, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28bcw"]
atlas = ExtResource("2_bu32e")
region = Rect2(64, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li1yw"]
atlas = ExtResource("2_bu32e")
region = Rect2(128, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knafd"]
atlas = ExtResource("2_bu32e")
region = Rect2(192, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi88y"]
atlas = ExtResource("2_bu32e")
region = Rect2(256, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82icw"]
atlas = ExtResource("2_bu32e")
region = Rect2(320, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1uws"]
atlas = ExtResource("2_bu32e")
region = Rect2(384, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q53nr"]
atlas = ExtResource("2_bu32e")
region = Rect2(448, 519, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3ovj"]
atlas = ExtResource("2_bu32e")
region = Rect2(512, 519, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pjvm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qjy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvepl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lplp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hli0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ya8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffyya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pekxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u662")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebtv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sy0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ebcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4rcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_narkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2wlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh2b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpngv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfdwd")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e6df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn134")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohcjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hse6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uwqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvp5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0krhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3amt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpojo")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfu8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgom5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gb6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx5cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4jly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emq2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suecg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t87s4")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikr2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28bcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li1yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knafd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi88y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82icw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1uws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q53nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3ovj")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfxij"]
radius = 10.0499

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyujn"]
size = Vector2(29, 50.5)

[node name="Boid" type="CharacterBody2D" groups=["boids"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_t1ht1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5pjvm")
animation = &"walk_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_qfxij")

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -49)

[node name="RayDown" type="RayCast2D" parent="."]

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-62, 1)

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(66, 0)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.5, -1.25)
shape = SubResource("RectangleShape2D_qyujn")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
